#12512 - Missing translations Task-Url: https://redmine.magenta-aps.dk/issues/12512

--- a/share/src/main/amp/web/js/aikau/LATEST/alfresco/services/i18n/ActionService_da.properties
+++ b/share/src/main/amp/web/js/aikau/LATEST/alfresco/services/i18n/ActionService_da.properties
@@ -73,3 +73,5 @@ dnd.upload.description=Overf\u00f8r filer
 dnd.newfolder.description=Opret en mappe
 other.options=Du kan ogs\u00e5...
 dnd.upload.tooltip=<p>Du kan tr\u00e6k og slippe filer ind i dokumentbiblioteket.</p><p>For at bruge tr\u00e6k og slip i stedet luk da overf\u00f8rsels dialogen forneden.</p>
+
+services.ActionService.ActionUploadNewVersion.title=Upload ny version
