--- a/share/src/main/amp/web/js/aikau/LATEST/alfresco/upload/i18n/AlfUploadDisplay_da.properties
+++ b/share/src/main/amp/web/js/aikau/LATEST/alfresco/upload/i18n/AlfUploadDisplay_da.properties
@@ -6,3 +6,4 @@ aggregate-progress.label=Oversigt over uploadfremskridt
 failed.label=Upload fejl
 
 upload.failure.reason.unknown=Ukendt
+progress-dialog.title=Dokument(er) Overf\u00f8res...
