--- a/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/components/people-finder/people-finder.get_da.properties
+++ b/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/components/people-finder/people-finder.get_da.properties
@@ -31,3 +31,4 @@ help.example6=Petersen jobtitel:ingeni\u00f8r
 help.result6=Resultaterne for denne foresp\u00f8rgsel vil finde brugere, hvis fornavn, efternavn eller brugernavn starter med Petersen og jobtitel indeholder ingeni\u00f8r.
 help.example7=F Petersen jobtitel:ingeni\u00f8r
 help.result7=The results for this query will list all users whose first name starts with A and surname starts Smith and job title contains engineer.
+help.content=Frems\u00f8g brugerprofiler (efter lokation, jobtitel eller organisation) ved at tilf\u00f8je egenskaben, som du s\u00f8ger via (fx. "location:K\u00f8benhavn", "organization:Milj\u00f8ministeriet" eller "jobtitle:Konsulent").
