Updated the actual properties files with the new danish translations. Aikau stuff still missing

--- a/share/src/main/amp/config/alfresco/messages/slingshot_da.properties
+++ b/share/src/main/amp/config/alfresco/messages/slingshot_da.properties
@@ -1212,3 +1212,133 @@ hybridworkflow.destination.button=V\u00e6lg
 
 # Security
 security.insecuremimetype=Mimetypen for den forspurgte fil er anset som en sikkerhedsrisiko og vil ikke blive vist.
+
+role.SiteManager.description=har fulde rettigheder til alt indhold p\u00E5 sitet - b\u00E5de det, som de selv og andre har oprettet
+
+role.SiteCollaborator.description=har fulde rettigheder til site-indholdet, de ejer; de har rettigheder til redigere, men ikke slette indhold, som er oprettet af andre site-medlemmer.
+
+tool.module-package.label=Modulbrowser
+
+hybridsync.ssd-failed-reason-header-label=Synkroniseringsfejltype
+
+message.edit-online-aos.edit_offline_locked.cancel=Annuller
+
+tool.module-package.description=Modulbrowser
+
+roles-tooltip.header=Om roller
+
+message.edit-online-aos.edit_offline_locked.title={0} er ved redigere denne fil
+
+role.Collaborator.description=har fulde rettigheder til indholdet, de ejer; de har rettigheder til at redigere, men ikke slette indhold, som er oprette af andre brugere.
+
+hybridsync.remote-tenant-id-header-label=Skyens netv\u00E6rk
+
+button.take-ownership=OK
+
+site.visibility.description.MODERATED=Alle i din organisation kan finde dette site og bede om adgang. Adgang kan gives af siteadministratorer.
+
+message.take-ownership.failure=Kunne ikke blive ejer af ''{0}''
+
+message.unlock-document.success=''{0}'' er l\u00E5st op for redigering
+
+role.SiteConsumer.description=har kun l\u00E6serettigheder p\u00E5 et site; de kan ikke oprette deres eget indhold.
+
+actions.document.cancel-editing-unlock=L\u00E5s dokument op
+
+message.edit-online-aos.edit_offline_locked.message=Dine \u00E6ndringer vil muligvis g\u00E5 tabt
+
+hybridsync.sync-creator-header-label=Opretter af synkronisering
+
+label.trademark=Simpelt + Smart
+
+lightbox.close=luk
+
+message.edit-online.supported_office_version_required=Du bruger en version af Microsoft Office, som ikke er underst\u00F8ttet af Alfresco. Pr\u00F8v at opdatere Microsoft Office. Office 2007 og 2008 virker ikke med Google Chrome.
+
+role.Consumer.description=har kun rettigheder til at l\u00E6se; de kan ikke oprette deres eget indhold.
+
+role.Collaborator=Samarbejdspartner
+
+hybridsync.path-desc-header-label=Oprindelig placering af objekt
+
+calendar.widget_control_config.label_year=Indtast \u00E5rstal
+
+message.edit-online-aos.edit_offline_locked.confirm=Forts\u00E6t
+
+aspect.exif_camera=Kameradetaljer
+
+site.visibility.label.MODERATED=Modereret
+
+actions.folder.take-ownership=Bliv ejer
+
+role.Coordinator.description=har fulde rettigheder til alt indhold - b\u00E5de det, som de selv og andre har oprettet
+
+role.Contributor=Bidragsyder
+
+message.unlock-document.failure=Kunne ikke l\u00E5se ''{0}'' op.
+
+roles-tooltip.docs-url=http://docs.alfresco.com/{0}/references/permissions_share.html
+
+site.visibility.label.PUBLIC=Offentlig
+
+role.Consumer=Konsument
+
+hybridsync.target-folder-node-ref-header-label=Destination for sky
+
+role.SiteContributor.description=har fulde rettigheder til site-indholdet, de ejer; de kan ikke redigere eller slette indhold, som er oprettet af andre site-medlemmer.
+
+hybridsync.ssd-id-header-label=Synkroniserings ID
+
+message.failure.workflow=Brugeren {0} har ikke tilladelse til at tilg\u00E5 denne opgave
+
+message.edit-online-aos.plugin_blocked.body.chrome=Tryk p\u00E5 blokeringsikonet p\u00E5 adresselinjen i Chrome for at forts\u00E6tte
+
+message.confirm.take-ownership.title=Bliv ejer?
+
+page.error.500.title=Alfresco Share &raquo; Systemfejl
+
+roles-tooltip.docs-url-label=Se mere
+
+site.visibility.description.PUBLIC=Alle i din organisation kan tilg\u00E5 dette site.
+
+lightbox.loading=henter
+
+role.Editor.description=har rettigheder til at redigere filegenskaber og checke filer ind og ud; de kan ikke oprette deres eget indhold.
+
+message.new-version-upload.success=Filen er uploadet. Forh\u00E5ndsvisningen viser muligvis endnu ikke den seneste version af dokumentet - du kan genopfriske siden senere for at opdatere forh\u00E5ndsvisningen
+
+role.Coordinator=Koordinator
+
+message.edit-online-aos.plugin_blocked.body.firefox=Tryk p\u00E5 v\u00E6rkt\u00F8jslinjen i Firefox for at forts\u00E6tte
+
+page.add-users.description=Tilf\u00F8j brugere til et site
+
+message.details.failure.more.max.length=En af egenskaberne har en st\u00F8rrelse, som er st\u00F8rre end det tilladte.
+
+message.take-ownership.success=Du er nu ejer af ''{0}''
+
+site.visibility.label.PRIVATE=Privat
+
+actions.document.unzip-to=Udpak til...
+
+calendar.widget_control_config.label_month=V\u00E6lg m\u00E5ned
+
+quickshare.document.unshare.user.failure=Du har ikke de n\u00F8dvendige tilladelser til udf\u00F8re denne handling
+
+role.Editor=Redakt\u00F8r
+
+role.Contributor.description=har fulde rettigheder at indholdet, de ejer; de kan ikke redigere eller slette indhold, som andre har oprettet.
+
+hybridsync.cloud-user-header-label=Bruger i skyen
+
+page.add-users.title=Tilf\u00F8j brugere
+
+calendar.widget_control_config.label_invalid_year=Indtast venligst et gyldigt \u00E5rstal
+
+site.visibility.description.PRIVATE=Kun brugere, som er tilf\u00F8jet af en siteadministrator, kan finde og bruge dette site
+
+actions.document.take-ownership=Bliv ejer
+
+aspect.exif_resolution=Opl\u00F8sning
+
+message.confirm.take-ownership=Du bliver ejer af ''{0}'' og den tidligere ejer vil muligvis f\u00E5 indskr\u00E6nket sine rettigheder
