--- a/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/components/calendar/view.get_da.properties
+++ b/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/components/calendar/view.get_da.properties
@@ -67,3 +67,7 @@ fullCalendar.timeFormat.week=h:mmtt
 fullCalendar.titleFormat.day=ddd, dd, MMMM yyyy
 fullCalendar.titleFormat.month=MMMM yyyy
 fullCalendar.titleFormat.week=d MMMM yyyy
+
+calendar.site-does-not-exist-title=Sitet ''{0}'' findes ikke eller ogs\u00E5 har du ikke de n\u00F8dvendige rettigheder til at tilg\u00E5 det
+
+calendar.site-does-not-exist=Sitet findes ikke eller ogs\u00E5 har du ikke de n\u00F8dvendige rettigheder til at tilg\u00E5 det
