--- a/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/components/console/usersgroups/users.get_da.properties
+++ b/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/components/console/usersgroups/users.get_da.properties
@@ -59,3 +59,38 @@ panel.delete.header=Bekr\u00e6ft
 panel.delete.msg=Tryk slet for at fjerne denne bruger fra systemet.
 panel.delete.note=Note: Ved sletning af en bruger bliver deres rettigheder ikke fjernet fra repositoriet. Disse rettigheder bliver genbrugt hvis brugeren er oprettet igen senere. Overvej at deaktivere brugerens konto i stedet.
 panel.delete.fail=Kunne ikke slette bruger.
+label.authorization.status.DEAUTHORIZED=De-autoriseret
+
+reauthorize.dialog.title=Re-autoriser brugeren \"{0}\"
+
+label.authorization.status.NEVER_AUTHORIZED=Aldrig autoriseret
+
+reauthorize.dialog.success=Re-autorisation lykkedes
+
+deauthorize.dialog.cannot.deauthorize.admin=Du kan ikke fjerne autorisationen fra administratorer
+
+label.authorization.status.AUTHORIZED=Autoriseret
+
+reauthorize.dialog.message=Giv den f\u00F8lgende autorisationskode til Alfresco Support teamet \"<b>{0}</b>\". De vil give dig en fil, som du kan uploade.
+
+deauthorize.dialog.header=Er du sikker p\u00E5, at du vil de-autorisere <b>\"{0}\"</b>?
+
+reauthorize.dialog.fail=Reautorisation fejlet (autorisationskoden blev ikke accepteret eller der opstod en fejl p\u00E5 serveren)
+
+message.deauthorize.failure=Vi kunne ikke de-autorisere brugeren. \n \"{0}\"
+
+deauthorize.dialog.deauthorize.confirm.ok=Fjern autorisation
+
+reauthorize.dialog.button.ok=Re-autorisér
+
+label.authorization.deleted=Slettet
+
+label.authorization=Autorisationstilstand
+
+message.deauthorize.success=Brugerens autorisation blev \u00E6ndret
+
+deauthorize.dialog.deauthorize.confirm.cancel=Annuller
+
+deauthorize.dialog.checkbox.message=Jeg er indforst\u00E5et med, at brugerens autorisation ikke kan tildeles igen, n\u00E5r f\u00F8rst den er fjernet
+
+label.authorization.isdeleted=Slettet?
