--- a/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/components/dashboard/customise-dashlets.get_da.properties
+++ b/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/components/dashboard/customise-dashlets.get_da.properties
@@ -71,3 +71,21 @@ dashlet.site-search.shortName=Site s\u00f8gning
 dashlet.site-search.description=Site s\u00f8gningsinstrument
 dashlet.site-notice.shortName=Site bem\u00e6rkninger
 dashlet.site-notice.description=Tilf\u00f8j en tilpasset bem\u00e6rkning som vises til site brugere
+
+dashlet.site-content-report.description=Viser sitets forskellige typer grafisk
+
+header.welcomePreference=Kom godt i gang
+
+label.keyboard-instruction2=Ved brug af tastetur: brug tabulatortasten for at v\u00E6lge et instrument. Brug piletasterne for at navigere til n\u00E6ste instrument. Tryk escape for at frav\u00E6lge et objekt. Tryk Delete for at slette et objekt.
+
+welcomePanel.disabled=Skjul fra instrumentbr\u00E6t
+
+dashlet.top-site-contributor-report.description=Viser, hvem der har bidraget mest til sitet.
+
+welcomePanel.enabled=Vis p\u00E5 instrumentbr\u00E6t
+
+dashlet.site-content-report.shortName=Filetypeoversigt for sitet
+
+dashlet.top-site-contributor-report.shortName=Bidragsyderoversigt for sitet
+
+label.keyboard-instruction1=Ved brug af tastetur: brug tabulatortasten for at navigere til n\u00E6ste instrument. V\u00E6lg dashletten og tryk retur for at tilf\u00F8je instrumentet til kolonne. Tryk escape for at frav\u00E6lge et objekt
