--- a/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/components/dashlets/activity-list.get_da.properties
+++ b/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/components/dashlets/activity-list.get_da.properties
@@ -58,3 +58,5 @@ org.alfresco.datalists.list-deleted={1} slettede dataliste {0}
 org.alfresco.subscriptions.followed={1} f\u00f8lger nu {5}
 org.alfresco.subscriptions.subscribed={1} abonnere p\u00e5 {2}
 org.alfresco.profile.status-changed={1}: {2}
+
+more.activities={0} aktiviter til
