--- a/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/components/dashlets/dynamic-welcome.get_da.properties
+++ b/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/components/dashlets/dynamic-welcome.get_da.properties
@@ -62,3 +62,12 @@ welcome.cloud.sign-up.link=Registrer
 message.request-joining=Foresp\u00f8rger p\u00e5 at tilf\u00f8je bruger {0} til site {1}...
 message.request-join-success=Foresp\u00f8rg p\u00e5 deltagelse i site {1} blev afsende. Du vil nu returnere til din personlige side.
 message.request-join-failure=Kunne ikke foretage foresp\u00f8rgsel p\u00e5 at tilf\u00f8je bruger {0} til site {1}.
+user.panel.delete.header=Skjul panelet?
+
+user.welcome.close=Skjul
+
+site.welcome.close=Fjern
+
+site.panel.delete.msg=Er du sikker p\u00E5, at du vil fjerne hj\u00E6lpepanelet fra instrumentbr\u00E6ttet permanent?
+
+site.panel.delete.header=Bekr\u00E6ft fjernelse
