--- a/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/components/documentlibrary/tree.get_da.properties
+++ b/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/components/documentlibrary/tree.get_da.properties
@@ -3,3 +3,4 @@ header.library=Bibliotek
 
 ## Top-level Root Node
 node.root=Dokumenter
+message.refresh.failure.forbidden=Biblioteket er kun synligt for medlemmer af sitet
