--- a/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/components/invite/invitationlist.get_da.properties
+++ b/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/components/invite/invitationlist.get_da.properties
@@ -13,3 +13,10 @@ invitationlist.back-to=tilbage til sitets medlemmer
 
 ## role labels
 role=Rolle
+invitationlist.addDirect.title=V\u00E6lg brugerrolle
+
+added-users-list.tally=Antal brugere tilf\u00F8jet {0}
+
+added-users-list.direct-add-instructions=Du har ikke valgt nogle brugere endnu
+
+message.failure-adding-users={0} bruger(e) kunne ikke tilf\u00F8jes
