--- a/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/components/invite/members-bar.get_da.properties
+++ b/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/components/invite/members-bar.get_da.properties
@@ -4,3 +4,4 @@ link.site-groups=Grupper
 link.pending-invites=Afventende invitationer
 link.invite-people=Inviter personer
 link.add-groups=Tilf\u00f8j grupper
+link.add-users=Tilf\u00F8j brugere
