--- a/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/components/people-finder/people-finder.get_da.properties
+++ b/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/components/people-finder/people-finder.get_da.properties
@@ -32,3 +32,7 @@ help.result6=Resultaterne for denne foresp\u00f8rgsel vil finde brugere, hvis fo
 help.example7=F Petersen jobtitel:ingeni\u00f8r
 help.result7=The results for this query will list all users whose first name starts with A and surname starts Smith and job title contains engineer.
 help.content=Frems\u00f8g brugerprofiler (efter lokation, jobtitel eller organisation) ved at tilf\u00f8je egenskaben, som du s\u00f8ger via (fx. "location:K\u00f8benhavn", "organization:Milj\u00f8ministeriet" eller "jobtitle:Konsulent").
+
+message.results=S\u00F8gning efter \"{0}\" fandt {1} resultater.
+
+message.maxresults=Mere end {0} s\u00F8geresultater fundet. Viser kun de f\u00F8rste {0}
