--- a/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/components/tag-filter/tag-filter.get_da.properties
+++ b/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/components/tag-filter/tag-filter.get_da.properties
@@ -6,3 +6,4 @@ label.no-tags=Ingenting er blevet tagget
 
 ## Messages
 message.refresh.failure=Kunne ikke hente tags
+message.refresh.failure.forbidden=Tags er kun synlige for medlemmer af sitet
