--- a/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/components/title/collaboration-title.get_da.properties
+++ b/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/components/title/collaboration-title.get_da.properties
@@ -25,3 +25,7 @@ message.become-manager-failure=Kunne ikke tillade site ansvarlig adgang
 message.title-site-permission=You do not have permissions to access the site ''{0}''
 message.private-site=You do not have permissions to access this site content. This site is private.
 message.moderated-site=You do not have permissions to access this site content. You may request to Join this site.
+
+message.site-does-not-exist-title=Sitet ''{0}'' findes ikke, eller ogs\u00E5 har du ikke tilladelse til at tilg\u00E5 det
+
+message.site-does-not-exist=Det efterspurgte site findes ikke, eller ogs\u00E5 har du ikke tilladelse til at tilg\u00E5 det.
