--- a/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/modules/cloud/cloud-auth-form.get_da.properties
+++ b/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/modules/cloud/cloud-auth-form.get_da.properties
@@ -5,3 +5,6 @@ label.cloud-email=E-mail
 label.cloud-password=Adgangskode
 button.ok=Forbind
 button.cancel=Annuller
+label.signup=Ingen konto? Tilmeld dig gratis
+
+label.forgot-password=Glemt password?
