--- a/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/modules/cloud/cloud-sync-status.get_da.properties
+++ b/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/modules/cloud/cloud-sync-status.get_da.properties
@@ -8,3 +8,8 @@ button.unsync=Fjern synkronisering
 sync.status.message.parent=Dette indhold synkroniseres til:
 sync.status.unknown-location=Kunne ikke hente placering
 sync.status.report-label=Teknisk rapport
+sync.status.unknown-location.no-permissions=Du har ikke rettigheder til at se detaljer for nodes
+
+sync.status.unknown-location.cause=\u00C5rsag
+
+sync.status.unknown-location.unauthorized=Ikke autoriseret
