--- a/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/modules/create-site.get_da.properties
+++ b/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/modules/create-site.get_da.properties
@@ -14,3 +14,4 @@ error.duplicateShortName=Kunne ikke oprette site, da URL allerede er i brug
 error.loggedOut=Din session l\u00f8b ud for tid, v\u00e6r venlig at logge ind og fors\u00f8ge igen
 error.noPermissions=Kunne ikke oprette site. Du har ikke rettigheder til at udf\u00f8re denne funktion.
 error.create=Kunne ikke oprette site p\u00e5 dette tidspunkt. V\u00e6r venlig at pr\u00f8ve igen senere.
+error.unableToCreate=Dette site-navn anvendes allerede af et andet site. Unders\u00F8g, om et andet site (som m\u00E5ske er slettet eller findes i en skraldespand) anvender navnet eller v\u00E6lg et andet sitenavn
