--- a/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/modules/documentlibrary/copy-move-to.get_da.properties
+++ b/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/modules/documentlibrary/copy-move-to.get_da.properties
@@ -19,3 +19,20 @@ move.message.failure=Flytningen kunne ikke fuldf\u00f8res
 move.message.exists.failure.file=Flytningen kunne ikke gennemf\u00f8res. En fil med dette navn eksisterer allerede
 move.message.exists.failure.folder=Flytningen kunne ikke gennemf\u00f8res. En folder med dette navn eksisterer allerede
 move.message.no-files=Mindst en fil skal angives for at kunne flytte
+unzip.message.please-wait=Filer udpakkes...
+
+unzip.button=Udpak
+
+unzip.message.no-files=Der skal mindst tilf\u00F8jes en fil, som skal udpakkes
+
+unzip.message.success=Udpakkede {0} objekt(er)
+
+unzip.title.single=Udpak {0} til...
+
+unzip.message.exists.failure.file=Udpakningen kunne ikke fuldf\u00F8res. Der findes allerede en fil med det samme navn
+
+unzip.message.failure=Udpakningen kunne ikke fuldf\u00F8res
+
+unzip.title.multi=Udpak {0} objekter til...
+
+unzip.message.exists.failure.folder=Udpakningen kunne ikke fuldf\u00F8res. Der findes allerede en mappe med det samme navn
