--- a/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/share/imports/share-header.lib_da.properties
+++ b/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/share/imports/share-header.lib_da.properties
@@ -30,3 +30,16 @@ logout.label=Log ud
 header.advanced=G\u00e5 til avanceret s\u00f8gning
 header.backlink=Tilbage til {0} site
 header.results=Tilbage til resultater
+group.set_status.label=Status
+
+header.menu.user_dashboard.label=Instrumentbr\u00E6t
+
+group.home_page.label=Hjem
+
+set_dashboard_as_home.label=Brug mit instrumentbr\u00E6t
+
+group.other.label=Generelt
+
+join_site_moderated.label=Foresp\u00F8rg deltagelse
+
+set_current_page_as_home.label=Anvend nuv\u00E6rende side
