--- a/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/share/pages/faceted-search/faceted-search-config.get_da.properties
+++ b/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/share/pages/faceted-search/faceted-search-config.get_da.properties
@@ -2,3 +2,96 @@ surf.include.resources=org/alfresco/share/imports/share-header.lib
 
 faceted-search-config.page.title=Konfiguration af facets\u00f8gning
 faceted-search-config.page.no-permissions=Dette kr\u00e6ver s\u00f8ge-administratorrettigheder
+faceted-search-config.create-facet.label=Opret nyt filter
+
+faceted-search-config.isDefault.label=Standard filter
+
+faceted-search-config.maxFilters.label=Antal filtre
+
+faceted-search-config.form.cancel.label=Annuller
+
+faceted-search-config.filterId.placeHolder=Indtast et unikt filter ID
+
+faceted-search-config.displayControl.description=V\u00E6lg, hvordan filtret skal vises
+
+faceted-search-config.filterId.error.invalid=Du kan ikke gemme et filter ID, som slutter med et punktum eller indeholder nogle af tegnene  " * \ < > ? / : | %
+
+faceted-search-config.sortBy.index.label=Serverdefineret indeks
+
+faceted-search-config.sortBy.lowToHigh.label=Antal resultater (lav til h\u00F8j)
+
+faceted-search-config.displayControl.label=Filtertype
+
+faceted-search-config.sortBy.label=Sortér efter
+
+faceted-search-config.filterId.error.isUse=Dette filter ID er allerede blevet brugt
+
+faceted-search-config.isEnabled.yes=Ja
+
+faceted-search-config.scope.site.label=Valgte sites
+
+faceted-search-config.scope.description=V\u00E6lg, hvor filtret skal v\u00E6re tilg\u00E6ngeligt
+
+faceted-search-config.minFilterValueLength.description=V\u00E6lg kun at vise filterresultater med et vidst antal karakterer, s\u00E5 du kan ekskludere korte ord som ”og” og ”til” fra filterresultaterne
+
+faceted-search-config.scopedSites.label=Sites
+
+faceted-search-config.delete.confirmationPrompt=Er du sikker p\u00E5, at du vil slette '{filterID}'?
+
+faceted-search-config.scopedSites.description=Tilf\u00F8j og v\u00E6lg sites, som filtret skal v\u00E6re tilg\u00E6ngeligt for
+
+faceted-search-config.filterId.description=Det unikke id for dette s\u00F8gefilter
+
+faceted-search-config.minFilterValueLength.label=Minimal filterl\u00E6ngde
+
+faceted-search-config.isEnabled.label=Vis med s\u00F8geresultater
+
+faceted-search-config.sortBy.AtoZ.label=A-Z
+
+faceted-search-config.displayControl.basic.label=Afkrydningsfelt
+
+faceted-search-config.sortBy.ZtoA.label=Z-A
+
+faceted-search-config.isEnabled.description=Du kan sl\u00E5 dette fra for at skjulde filtret fra s\u00F8geresultaterne
+
+faceted-search-config.form.save.label=Gem
+
+faceted-search-config.isEnabled.no=Nej
+
+faceted-search-config.delete.successMessage='{filterID}' slettet
+
+faceted-search-config.filterId.label=Filter ID
+
+faceted-search-config.isDefault.description=Pr\u00E6definerede filtre kan ikke slettes. Du kan skjule dem ved at sl\u00E5 ”Vis med s\u00F8geresultater” fra
+
+faceted-search-config.update.successMessage=Opdaterede '{filterID}'
+
+faceted-search-config.scope.none.label=Overalt
+
+faceted-search-config.scopedSites.site.description=V\u00E6lg og gem et site.
+
+faceted-search-config.facetQName.description=V\u00E6lg egenskab at filtrere efter
+
+faceted-search-config.maxFilters.description=V\u00E6lg det maksimale antal filtre som vises for s\u00F8geresultater (brugere kan v\u00E6lge at vise flere filtre)
+
+faceted-search-config.hitThreshold.label=Mindste antal resultater kr\u00E6vet
+
+faceted-search-config.hitThreshold.description=V\u00E6lg det mindste antal hits et filterresultat skal have for at blive vist
+
+faceted-search-config.displayName.description=Det viste filternavn
+
+faceted-search-config.sortBy.highToLow.label=Antal resultater (h\u00F8j til lav)
+
+faceted-search-config.scope.label=Filtertilg\u00E6ngelighed
+
+faceted-search-config.scopedSites.site.label=Site-navn
+
+faceted-search-config.sortBy.description=V\u00E6lg r\u00E6kkef\u00F8lgen, som filterresultaterne vises i.
+
+faceted-search-config.displayName.placeHolder=Indtast filternavn til visning
+
+faceted-search-config.facetQName.label=Filteregenskab
+
+faceted-search-config.displayName.label=Filternavn
+
+faceted-search-config.delete.altText=Klik for at slette '{0}'
