--- a/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/share/pages/faceted-search/faceted-search.get_da.properties
+++ b/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/share/pages/faceted-search/faceted-search.get_da.properties
@@ -80,3 +80,30 @@ faceted-search.size.100KB-1MB.label=100KB til 1MB
 faceted-search.size.1-16MB.label=1 til 16MB
 faceted-search.size.16-128MB.label=16 til 128MB
 faceted-search.size.over128.label=St\u00f8rre end 128MB
+faceted-search-config.label=Konfiguration af facets\u00f8gning
+
+faceted-search.results.caption=S\u00F8geresultater
+
+faceted-search.select-search-form.label=V\u00E6lg formular til avanceret s\u00F8gning
+
+faceted-search.heading.sort-menu=Sorteringsmenu
+
+faceted-search.heading.search-results-list=Resultater
+
+faceted-search.show-more-results.label=Vis flere resultater
+
+faceted-search.results.heading.details=Resultatdetaljer
+
+faceted-search.hide-advanced-search.label=Skjul avanceret s\u00F8gning
+
+faceted-search.suggestions.label=Mente du:
+
+faceted-search.heading.facet-menu=Facetmenu
+
+faceted-search.search-form.search-field-label=S\u00F8gefelt
+
+faceted-search.heading.search-form=S\u00F8geformular
+
+faceted-search.results.heading.thumbnail=Resultat-thumbnail
+
+faceted-search.show-advanced-search.label=Vis avanceret s\u00F8gning
