--- a/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/components/comments/comments-list.get_da.properties
+++ b/share/src/main/amp/config/alfresco/site-webscripts/org/alfresco/components/comments/comments-list.get_da.properties
@@ -18,3 +18,7 @@ message.confirm.delete.title=Slet kommentar
 message.confirm.delete=Er du sikker p\u00e5 at du vil slette denne kommentar?
 message.wait=V\u00e6r venlig at vente...
 
+
+link.showHelp=Vis hj\u00E6lp
+
+link.help=Tasteturgenveje: Fed (Ctrl+B), Kursiv (Ctrl+I), Understreg (Ctrl+U), Fortryd (Ctrl+Z), Omg\u00F8r (Ctrl+Y)
